Added Education and Hobbies section to index page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Collins Obasuyi Page">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>❤ Collins Personal Site</title>
 </head>
+
 <body>
+    <h1>Collins Obasuyi</h1>
+    <p> <em> Chief Digital Product Design & Development Solution ArchiTechnology Of <strong>BINIBOI</strong></em></p>
+    <p>I am a Product Developer</p>
+
+    <hr>
+
+    <h3>Education</h3>
+    <ul>
+        <li>BTEC National Diploma In Science</li>
+        <li>BEng(Hons) Computer Systems & Software Engineering</li>
+        <li>MSc(Hons) Engineering Management</li>
+    </ul>
+    <hr>
+
+    <h3>Hobbies & Interest</h3>
+    <ol>
+        <li>Boxing</li>
+        <li>BJJ</li>
+        <li>Kickboxing</li>
+        <li>Drawing</li>
+        <li>Cooking</li>
+        <li>Reading</li>
+        <li>Socialising</li>
+    </ol>
 
 </body>
+
 </html>
