--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
         <li>Socialising</li>
     </ol>
 
+    <ol
+        <li>Boxing</li>
+        <li>BJJ</li>
+        <li>Kickboxing</li>
+        <li>Drawing</li>
+        <li>Cooking</li>
+        <li>Reading</li>
+        <li>Socialising</li>
+    </ol>
+
 </body>
 
 </html>
