--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEYkufwxWq1IQ/profile-displayphoto-shrink_200_200/0/1606810347957?e=1637798400&v=beta&t=U3QTzpt8IqUplg3SWgcvhYdKdd_x5NZRi1ghDRiQcMY" alt="">
     <h1>Collins Obasuyi</h1>
     <p> <em> Chief Digital Product Design & Development Solution ArchiTechnology Of <strong>BINIBOI</strong></em></p>
     <p>I am a Product Developer</p>
