--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
-    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEYkufwxWq1IQ/profile-displayphoto-shrink_200_200/0/1606810347957?e=1637798400&v=beta&t=U3QTzpt8IqUplg3SWgcvhYdKdd_x5NZRi1ghDRiQcMY" alt="">
+    <img src="images/collins-modified.png" alt="collins obasuyi image">
     <h1>Collins Obasuyi</h1>
-    <p> <em> Chief Digital Product Design & Development Solution ArchiTechnology Of <strong>BINIBOI</strong></em></p>
+    <p> <em> Chief Digital Product Design & Development Solution ArchiTechnology Of <strong><a
+                    href="https://github.com/collinsobasuyi/Web-Development-Bootcamp"
+                    target="_blank">collinsobasuyi.io</a></strong></em></p>
     <p>I am a Product Developer</p>
 
     <hr>
@@ -23,19 +25,41 @@
         <li>BEng(Hons) Computer Systems & Software Engineering</li>
         <li>MSc(Hons) Engineering Management</li>
     </ul>
-    <hr>
+    <h3>Work Exeperience</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>
+                    Date
+                </th>
+                <th>
+                    Work
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    2003 - 2007
+                </td>
+                <td>
+                    IT Developer
+                </td>
+            </tr>
 
-    <h3>Hobbies & Interest</h3>
-    <ol>
-        <li>Boxing</li>
-        <li>BJJ</li>
-        <li>Kickboxing</li>
-        <li>Drawing</li>
-        <li>Cooking</li>
-        <li>Reading</li>
-        <li>Socialising</li>
-    </ol>
+            <tr>
+                <td>
+                    2007 - till date
+                </td>
+                <td>
+                    IT Consultant
+                </td>
+            </tr>
+        </tbody>
+    </table>
 
+    <a href="/hobbies.html">My Hobbies & Interest</a>
+    <a href="/contact-me.html">Contact Me</a>
 </body>
 
 </html>
