Created input form

--- a/index.html
+++ b/index.html
@@ -10,23 +10,31 @@
 </head>
 
 <body>
-    <img src="images/collins-modified.png" alt="collins obasuyi image">
-    <h1>Collins Obasuyi</h1>
-    <p> <em> Chief Digital Product Design & Development Solution ArchiTechnology Of <strong><a
-                    href="https://github.com/collinsobasuyi/Web-Development-Bootcamp"
-                    target="_blank">collinsobasuyi.io</a></strong></em></p>
-    <p>I am a Product Developer</p>
+    <table cellspacing="20">
+        <tr>
+            <td>
+                <img src="images/collins-modified.png" alt="collins obasuyi image">
+            </td>
+            <td>
+                <h1>Collins Obasuyi</h1>
+                <p> <em> Chief Digital Product Design & Development Solution ArchiTechnology Of <strong><a
+                                href="https://github.com/collinsobasuyi/Web-Development-Bootcamp"
+                                target="_blank">collinsobasuyi.io</a></strong></em></p>
+                <p>I am a Product Developer</p>
+            </td>
+        </tr>
+    </table>
 
-    <hr>
-
+    <hr noshade="0" width="500px">
     <h3>Education</h3>
     <ul>
         <li>BTEC National Diploma In Science</li>
         <li>BEng(Hons) Computer Systems & Software Engineering</li>
         <li>MSc(Hons) Engineering Management</li>
     </ul>
+    <hr noshade="0" width="500px">
     <h3>Work Exeperience</h3>
-    <table>
+    <table cellspacing="10">
         <thead>
             <tr>
                 <th>
@@ -60,6 +68,33 @@
 
     <a href="/hobbies.html">My Hobbies & Interest</a>
     <a href="/contact-me.html">Contact Me</a>
+    <hr noshade="0" width="500px">
+    <h3>Skills</h3>
+    <table cellspacing="10">
+        <tbody>
+            <tr>
+                <td>Qaulity Assurance</td>
+                <td>★ ★ ★ ★ ★</td>
+                <td>Product UX Design</td>
+                <td>★ ★ ★ ★ ☆</td>
+            </tr>
+            <tr>
+                <td>Project Management</td>
+                <td>★ ★ ★ ★ ★</td>
+                <td>Business Analyst</td>
+                <td>★ ★ ★ ★ ☆</td>
+            </tr>
+
+            <tr>
+                <td>Web Development</td>
+                <td>★ ★ ★ ★ ☆</td>
+                <td>User Testing</td>
+                <td>★ ★ ★ ☆ ☆</td>
+            </tr>
+
+        </tbody>
+    </table>
+
 </body>
 
 </html>
