--- a/contact-me.html
+++ b/contact-me.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
 </head>
+
 <body>
     <h1>My Contact Details</h1>
     <p>My Fictional Address</p>
     <p>07446916926</p>
     <p>cobasuyijob@gmail.com</p>
-    
+    <hr noshade="0" width="500px">
+    <form action="/index.html" method="POST">
+        <label for="">Your Name:</label>
+        <input type="text" name="" value="">
+        <input type="submit" name="">
+    </form>
 </body>
+
 </html>
