--- a/contact-me.html
+++ b/contact-me.html
@@ -13,10 +13,14 @@
     <p>My Fictional Address</p>
     <p>07446916926</p>
     <p>cobasuyijob@gmail.com</p>
-    <hr noshade="0" width="500px">
-    <form action="/index.html" method="POST">
+    <hr>
+    <form action="mailto:info@collins.io" method="POST" enctype="text/plain">
         <label for="">Your Name:</label>
-        <input type="text" name="" value="">
+        <input type="text" name="yourNmae" value=""><br>
+        <label for="">Your Email</label>
+        <input type="email" name="yourEmail" id=""><br>
+        <label for="">Your Message</label><br>
+        <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
         <input type="submit" name="">
     </form>
 </body>
