--- a/input.html
+++ b/input.html
@@ -9,12 +9,15 @@
 <body>
     <form action="" method="POST">
     <input type="text" name="" id=""><br>
-    <input type="submit"><br>
     <input type="date" name="" id=""><br>
     <input type="password" name="" id=""><br>
     <input type="file" name="" id=""><br>
     <input type="radio" name="" id=""><br>
-    <input type="range" name="" id="">
+    <input type="checkbox" name="" id=""><br>
+    <input type="range" name="" id=""><br>
+    <input type="search" name="" id="">
+    <input type="datetime-local" name="" id="">
+    <input type="submit"><br>
 </form>
 </body>
 </html>
