Created contact me form contact

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </tbody>
     </table>
 
-    <a href="/hobbies.html">My Hobbies & Interest</a>
-    <a href="/contact-me.html">Contact Me</a>
+    <a href="hobbies.html">My Hobbies & Interest</a>
+    <a href="contact-me.html">Contact Me</a>
     <hr noshade="0" width="500px">
     <h3>Skills</h3>
     <table cellspacing="10">
