--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="description" content="Collins Obasuyi Page">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>❤ Collins Personal Site</title>
+
+
 </head>
 
 <body>
@@ -18,21 +21,21 @@
             <td>
                 <h1>Collins Obasuyi</h1>
                 <p> <em> Chief Digital Product Design & Development Solution ArchiTechnology Of <strong><a
-                                href="https://github.com/collinsobasuyi/Web-Development-Bootcamp"
-                                target="_blank" rel="noopener">collinsobasuyi.io</a></strong></em></p>
+                                href="https://github.com/collinsobasuyi/Web-Development-Bootcamp" target="_blank"
+                                rel="noopener">collinsobasuyi.io</a></strong></em></p>
                 <p>I am a Product Developer</p>
             </td>
         </tr>
     </table>
 
-    <hr noshade="0" width="500px">
+    <hr>
     <h3>Education</h3>
     <ul>
         <li>BTEC National Diploma In Science</li>
         <li>BEng(Hons) Computer Systems & Software Engineering</li>
         <li>MSc(Hons) Engineering Management</li>
     </ul>
-    <hr noshade="0" width="500px">
+    <hr>
     <h3>Work Exeperience</h3>
     <table cellspacing="10">
         <thead>
@@ -68,7 +71,7 @@
 
     <a href="hobbies.html">My Hobbies & Interest</a>
     <a href="contact-me.html">Contact Me</a>
-    <hr noshade="0" width="500px">
+    <hr>
     <h3>Skills</h3>
     <table cellspacing="10">
         <tbody>
